Add antlr for instrumentation